MenuCitasAdater estructura inicial

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">PsicologiaApp</string>
+
+    <!--CANALES  -->
+    <string name="tituloMenu">Menu</string>
+    <string name="citas">Citas</string>
+    <string name="talleres">Talleres</string>
+
 </resources>
